# icbm_firmware

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
driver_notes/: ExploreIR-M-E-100.md  SCD41.md
src/: main.rs
src/drivers/: bsz070.rs  co2_solenoid.rs  drv8873.rs  explorir_m_e_100.rs  mod.rs  scd41.rs  slf3s.rs  thermistor.rs
