[package]
name = "icbm_firmware"
version = "0.1.0"
edition = "2021"
authors = ["Viraj Chhajed <viraj@generalcybernetics.org>"]

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt" ] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "42815e944af09f7de6278483caf0fb7e65ab1d1d" }
itoa = { version = "1.0", default-features = false }

defmt = "0.3"
defmt-rtt = "0.4"
libm = "0.2.11"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}

[profile.release]
debug = 2